2006-07-02  Derek Price  <derek@ximbiot.com>

	* longlong.m4, stdint.m4, ulonglong.m4, wcwidth.m4: Update from GNULIB.

2006-07-01  Derek Price  <derek@ximbiot.com>

	* sys_stat_h.m4: Update from GNULIB.

2006-06-29  Derek Price  <derek@ximbiot.com>

	* inet_ntop.m4, sys_stat_h.m4, wcwidth.m4: New files from GNULIB.
	* fnmatch.m4, getaddrinfo.m4, gnulib-comp.m4, mbiter.m4, strftime.m4:
	Update from GNULIB.

2006-06-27  Mark D. Baushke  <mdb@gnu.org>

	* stdint.m4: Update from gnulib.

2006-06-26  Mark D. Baushke  <mdb@gnu.org>

	* stdint.m4: Update from gnulib.

2006-06-24  Mark D. Baushke  <mdb@gnu.org>

	* stdint.m4: Update from gnulib.

2006-06-23  Larry Jones  <lawrence.jones@ugs.com>

	* stdint.m4: Combine BSD/OS stuff with OpenBSD/SGI and use the
	correct preprocessor symbol.

2006-06-23  Mark D. Baushke  <mdb@juniper.net>

	* stdint.m4: Both BSD/OS 4.2 and SGI-cc IRIX 5.3 seem to also need
	<sys/types.h> included.

2006-06-22  Mark D. Baushke  <mdb@gnu.org>

	* stdint.m4: Fork from gnulib based on tests with SGI.
	* getaddrinfo.m4, sockpfaf.m4: Update from gnulib.

2006-06-19  Mark D. Baushke  <mdb@gnu.org>

	* setenv.m4, size_max.m4, ssize_t.m4, stdint.m4: Update from
	gnulib.

2006-05-22  Mark D. Baushke  <mdb@gnu.org>

	* nanosleep.m4: Update from gnulib.

2006-05-15  Mark D. Baushke  <mdb@gnu.org>

	* stdbool.m4: Update from gnulib.

2006-05-13  Mark Baushke  <mdb@gnu.org>

	* _inttypes_h.m4, full-header-path.m4, gnulib-cache.m4,
	gnulib-comp.m4: Update from gnulib.

2006-04-27  Derek Price  <derek@ximbiot.com>

	* acx_with_gssapi.m4 (ACX_WITH_GSSAPI): Detect libgss for HP-UX.
	(Report from Larry Jones <lawrence.jones@ugs.com>.)

2006-04-25  Derek Price  <derek@ximbiot.com>

	* extensions.m4, getcwd-path-max.m4, getlogin_r.m4, getpass.m4,
	nanosleep.m4, rename.m4, strerror_r.m4, unlocked-io.m4: Update from
	GNULIB.

2005-10-27  Derek Price  <derek@ximbiot.com>

	* base64.m4: New file from GNULIB.

2006-04-19  Derek Price  <derek@ximbiot.com>
