@@ -1,4 +1,4 @@
-# _inttypes_h.m4 serial 2
+# _inttypes_h.m4 serial 3
 dnl Copyright (C) 2006 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
@@ -10,7 +10,7 @@ AC_DEFUN([gl_INTTYPES_H],
 [AC_REQUIRE([gl_INCLUDE_NEXT])dnl
 AC_LIBSOURCES([inttypes.h])
 if test $gl_cv_have_include_next = no; then
-  gl_FULL_HEADER_PATH([inttypes.h])
+  gl_ABSOLUTE_HEADER([inttypes.h])
 fi
 AC_CHECK_DECLS_ONCE([strtoimax strtoumax])dnl
 ])
